Designer 2.14.0 (2013-XX-XX Markab)
===================================

 New Features:

   - panStamps Lagarto configuration (Daniel Berenguer, 
     MODELER-397)
   - Round-robin database (RRD) configuration (MODELER-394)
   - Add web view widget (MODELER-248)
   - Add polling interval and regex attributes to ShellExe
     protocol (MODELER-463, Marcus Redeker)
   - Add polling interval to telnet protocol (MODELER-464,
     Marcus Redeker)
   - Add IP address to Samsung SmartTV protocol, enabling
     use of multiple devices (MODELER-465, Ivan Martinez)


 Fixes:

   - MODELER-346: regexp validation for IP fields in TCP
     and Telnet protocols were wrong. Validations have
     been disabled.
   - Fixes to image asset manager (Eric Bariaux, related 
     to MODELER-292)
   - MODELER-302: List of widgets does not scroll anymore
     (Eric Bariaux)
   - MODELER-304: UI elements (from panels.obj) restored 
     on login and not when UI designer pane is displayed. 
     "Please wait" message on login only dismissed when 
     UI has been built and initialized. (Eric Bariaux)


 Internal:

  - Upgrade to GXT3:
     * Image Asset Picker converted (Eric Bariaux, MODELER-330)


Designer 2.13.8 (2013-03-13 Rosemary)
=====================================

Bug fix release:

 - MODELER-410: KNX import getting namespace used 
   on XPath from document instead of hardcoded, 
   more robust to changes.
 - MODELER-397: panStamps Lagarto configuration
   included in controller configuration options


Designer 2.13.7 (2012-10-07 Rosemary)
=====================================

 - Add Z-wave configuration


Designer 2.13.6 (2012-09-20 Rosemary)
=====================================

Bug fix release:
 
 - Increase maximum command field length from 1000
   characters to 4000 characters for UDP, TCP, HTTP
   and Telnet protocols
 - MODELER-379: attempting to delete an already deleted
   device shows up as an error to the user
 - MODELER-380: Log errors related to data integrity